
2017-05-20  Ron Norman <rjn@inglenet.com>
	* testsuite.src/run_extensions.at: Test added for -fodoslide 

2017-02-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_file.at: fixed generation with old autoconf
	  that trips on the string AT_DATA in AT_DATA definitions

2016-12-30  Ron Norman <rjn@inglenet.com>

	* run_file.at: Add test cases for fiel SHARING/RETRY 
	  These test programs use SYSTEM with & to start two
	  concurrent running copies of the test program to
	  run concurrent test cases. There is also several C$SLEEP
	  calls to setup the test scenarios.
	  So these tests appear to run for a long time 

2016-11-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_extensions.at: splitted tests for CBL_GC_FORK /
	  CBL_GC_WAITPID, skip these tests if the functions return "not available"

2016-11-17  Ron Norman <rjn@inglenet.com>

	* testsuite.src/run_extensions.at: Add CBL_GC_FORK & CBL_GC_WAITPID

2016-11-15  Ron Norman <rjn@inglenet.com>

	* run_misc.at: 
	  changed dump.c as numeric literals are now passed
	  as PIC 9(9) BINARY format.
	* run_extensions.at: Added test case for CALL USING numeric literals

2016-10-29  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* atlocal.in: pass COB_HAS_UTC_OFFSET, set PATHSEP and COB_HAS_CURSES
	  for MinGW
	* testsuite.src/run_misc.at: define NULL if needed
  * testsuite.src/configuration.at: evaluate PATHSEP


2016-09-16  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* atlocal.in, atlocal_win : fix unset of environment variables
	  that are used in libcob for runtime configuration; bug #319

2016-07-17  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_extensions.at: Moved stdout stderr fprintf test
	  in CBL_OC_HOSTED to external C subprogram.
	  And then a correction to account for linkage exports.

2016-05-01  Ron Norman <rjn@inglenet.com>

	* run_misc.at removed check for 'NEW' as this is now a reserved word