@@ -120,22 +120,22 @@ AT_DATA([prog.cob], [
 
 AT_CHECK([$COMPILE -std=mf prog.cob], [0], [], [])
 
-AT_CHECK([./prog], [0], [COBOL: X is +0000000009 and Y is 0000000010
-COBOL: X is +0000001280 and Y is 0000000011
-COBOL: X is +0000001281 and Y is 0000000012
-COBOL: X is +0000001281 and Y is 0000000013
-COBOL: X is +0000001280 and Y is 0000000014
-COBOL: X is -0000001280 and Y is 0000000015
-COBOL: X is +0000001280 and Y is 0000000016
-COBOL: X is -0000001280 and Y is 0000000017
-COBOL: X is +0000001280 and Y is 0000000018
-COBOL: X is -0000001280 and Y is 0000000019
-COBOL: X is +0000001282 and Y is 0000000020
-COBOL: X is +0000001282 and Y is 0000000021
-COBOL: X is +1665431892 and Y is 0000000022
-COBOL: X is +0001665892 and Y is 0000000023
-COBOL: X is +0166589200 and Y is 0000000024
-COBOL: X is -1564248420 and Y is 0000000025
+AT_CHECK([./prog], [0], [COBOL: X is +000000009 and Y is 0000000010
+COBOL: X is +000001280 and Y is 0000000011
+COBOL: X is +000001281 and Y is 0000000012
+COBOL: X is +000001281 and Y is 0000000013
+COBOL: X is +000001280 and Y is 0000000014
+COBOL: X is -000001280 and Y is 0000000015
+COBOL: X is +000001280 and Y is 0000000016
+COBOL: X is -000001280 and Y is 0000000017
+COBOL: X is +000001280 and Y is 0000000018
+COBOL: X is -000001280 and Y is 0000000019
+COBOL: X is +000001282 and Y is 0000000020
+COBOL: X is +000001282 and Y is 0000000021
+COBOL: X is +665431892 and Y is 0000000022
+COBOL: X is +001665892 and Y is 0000000023
+COBOL: X is +166589200 and Y is 0000000024
+COBOL: X is -564248420 and Y is 0000000025
 ], [])
 
 AT_CLEANUP
