@@ -1862,36 +1862,36 @@ AT_CHECK([cobc -x -std=mf -w prog.cob], [0], [], [])
 AT_CHECK([./prog], [0], [Loading sample program data file.
 Sample program data file load complete.
 Initial Re-Read Open Sts:00
-Read2 ALP00000 #:00001 Trms:00010
-Read  BET00000 #:00002 Trms:00013
-Read2 GAM00000 #:00003 Trms:00075
-Read  DEL00000 #:00004 Trms:00010
-Read2 EPS00000 #:00005 Trms:00090
-Read  FOR00000 #:00006 Trms:00254
+Read2 ALP00000 #:0001 Trms:0010
+Read  BET00000 #:0002 Trms:0013
+Read2 GAM00000 #:0003 Trms:0075
+Read  DEL00000 #:0004 Trms:0010
+Read2 EPS00000 #:0005 Trms:0090
+Read  FOR00000 #:0006 Trms:0254
 Read Status: 10
 For Rewrite Open I-O Sts:00
-Read2 ALP00000 #:00001 Trms:00010
-REWRITE ALP00000 Sts 00 Trms:00011
+Read2 ALP00000 #:0001 Trms:0010
+REWRITE ALP00000 Sts 00 Trms:0011
 For Rewrite/Delete Open I-O Sts:00
-Read2 ALP00000 #:00001 Trms:00011
-REWRITE ALP00000 Sts 00 Trms:00012
-Read  BET00000 #:00002 Trms:00013
+Read2 ALP00000 #:0001 Trms:0011
+REWRITE ALP00000 Sts 00 Trms:0012
+Read  BET00000 #:0002 Trms:0013
 DELETE BET00000 Sts 00
 Re-list Open Sts:00
-Read2 ALP00000 #:00001 Trms:00012
-Read2 GAM00000 #:00003 Trms:00075
-Read  DEL00000 #:00004 Trms:00010
-Read2 EPS00000 #:00005 Trms:00090
-Read  FOR00000 #:00006 Trms:00254
+Read2 ALP00000 #:0001 Trms:0012
+Read2 GAM00000 #:0003 Trms:0075
+Read  DEL00000 #:0004 Trms:0010
+Read2 EPS00000 #:0005 Trms:0090
+Read  FOR00000 #:0006 Trms:0254
 Read Status: 10
 Re-list afer Extend Open Sts:00
-Read2 ALP00000 #:00001 Trms:00012
-Read2 GAM00000 #:00003 Trms:00075
-Read  DEL00000 #:00004 Trms:00010
-Read2 EPS00000 #:00005 Trms:00090
-Read  FOR00000 #:00006 Trms:00254
-Read2 ALP00000 #:00007 Trms:00010
-Read  BET00000 #:00008 Trms:00013
+Read2 ALP00000 #:0001 Trms:0012
+Read2 GAM00000 #:0003 Trms:0075
+Read  DEL00000 #:0004 Trms:0010
+Read2 EPS00000 #:0005 Trms:0090
+Read  FOR00000 #:0006 Trms:0254
+Read2 ALP00000 #:0007 Trms:0010
+Read  BET00000 #:0008 Trms:0013
 Read Status: 10
 ], [])
 
@@ -2226,81 +2226,81 @@ AT_CHECK([cobc -x -std=mf -w prog.cob], [0], [], [])
 AT_CHECK([./prog], [0], [Loading sample program data file.
 Sample program data file load complete.
 Open Sts:00
-Next  ALP00000 #00001 Trms:00010
-Next  BET00000 #00002 Trms:00013
-Next  DEL00000 #00003 Trms:00075
-Next  EPS00000 #00004 Trms:00010
+Next  ALP00000 #0001 Trms:0010
+Next  BET00000 #0002 Trms:0013
+Next  DEL00000 #0003 Trms:0075
+Next  EPS00000 #0004 Trms:0010
 *** Test Update of file ***
-Next  ALP00000 #00001 Trms:00010
-REWRITE ALP00000 Sts 00 Trms:00011
+Next  ALP00000 #0001 Trms:0010
+REWRITE ALP00000 Sts 00 Trms:0011
 Read ALP00000 Sts:00
-REWRITE ALP00000 Sts 00 Trms:00012
+REWRITE ALP00000 Sts 00 Trms:0012
 Read BET00000
 DELETE BET00000 Sts 00
 *** List file afer Update/Delete ***
-Read ALP00000 Sts 00 Trms:00012
-Read DEL00000 Sts 00 Trms:00075
-Read EPS00000 Sts 00 Trms:00010
-Read FOR00000 Sts 00 Trms:00090
-Read2 FOR00000 #00005 Trms:00090
-Read2 DEL00000 #00003 Trms:00075
-Write of 00003 Sts 22
-Read2 DEL00000 #00003 Trms:00075
- Read of deleted 00002 Sts 23
+Read ALP00000 Sts 00 Trms:0012
+Read DEL00000 Sts 00 Trms:0075
+Read EPS00000 Sts 00 Trms:0010
+Read FOR00000 Sts 00 Trms:0090
+Read2 FOR00000 #0005 Trms:0090
+Read2 DEL00000 #0003 Trms:0075
+Write of 0003 Sts 22
+Read2 DEL00000 #0003 Trms:0075
+ Read of deleted 0002 Sts 23
 ReWrite deleted BET00000 Sts 23
 Write of deleted BET00000 Sts 00
 *** List file afer Re-Add ***
-Read  ALP00000 #00001 Trms:00012
-Read  BET00000 #00002 Trms:00013
-Read  DEL00000 #00003 Trms:00075
-Read  EPS00000 #00004 Trms:00010
-Prev  DEL00000 #00003 Trms:00075
-Prev  BET00000 #00002 Trms:00013
-Prev  ALP00000 #00001 Trms:00012
+Read  ALP00000 #0001 Trms:0012
+Read  BET00000 #0002 Trms:0013
+Read  DEL00000 #0003 Trms:0075
+Read  EPS00000 #0004 Trms:0010
+Prev  DEL00000 #0003 Trms:0075
+Prev  BET00000 #0002 Trms:0013
+Prev  ALP00000 #0001 Trms:0012
 Read Prev Status: 10
-Start Last Sts 00 Rec#00006
-Prev  GAM00000 #00006 Trms:00254
-Prev  FOR00000 #00005 Trms:00090
-Start First Sts 00 Rec#00001
-Next  ALP00000 #00001 Trms:00012
-Next  BET00000 #00002 Trms:00013
-Start GE 4:00004 Sts 00 Rec#00004
-Next  EPS00000 #00004 Trms:00010
-Next  FOR00000 #00005 Trms:00090
-Start GT 4:00005 Sts 00 Rec#00005
-Next  FOR00000 #00005 Trms:00090
-Next  GAM00000 #00006 Trms:00254
-Start LT 5: 00004 Sts 00 Rec#00004
-Read  EPS00000 #00004 Trms:00010
-Prev  DEL00000 #00003 Trms:00075
-Start LE 5:00005 Sts 00 Rec#00005
-Read  FOR00000 #00005 Trms:00090
-Prev  EPS00000 #00004 Trms:00010
+Start Last Sts 00 Rec#0006
+Prev  GAM00000 #0006 Trms:0254
+Prev  FOR00000 #0005 Trms:0090
+Start First Sts 00 Rec#0001
+Next  ALP00000 #0001 Trms:0012
+Next  BET00000 #0002 Trms:0013
+Start GE 4:0004 Sts 00 Rec#0004
+Next  EPS00000 #0004 Trms:0010
+Next  FOR00000 #0005 Trms:0090
+Start GT 4:0005 Sts 00 Rec#0005
+Next  FOR00000 #0005 Trms:0090
+Next  GAM00000 #0006 Trms:0254
+Start LT 5: 0004 Sts 00 Rec#0004
+Read  EPS00000 #0004 Trms:0010
+Prev  DEL00000 #0003 Trms:0075
+Start LE 5:0005 Sts 00 Rec#0005
+Read  FOR00000 #0005 Trms:0090
+Prev  EPS00000 #0004 Trms:0010
 Re-list Open Sts:00
-Read  ALP00000 #00001 Trms:00012
-Read  BET00000 #00002 Trms:00013
-Read  DEL00000 #00003 Trms:00075
-Read  EPS00000 #00004 Trms:00010
-Read  FOR00000 #00005 Trms:00090
-Read  GAM00000 #00006 Trms:00254
+Read  ALP00000 #0001 Trms:0012
+Read  BET00000 #0002 Trms:0013
+Read  DEL00000 #0003 Trms:0075
+Read  EPS00000 #0004 Trms:0010
+Read  FOR00000 #0005 Trms:0090
+Read  GAM00000 #0006 Trms:0254
 Read Status: 10
 Re-list after Extend Open Sts:00
-Read  ALP00000 #00001 Trms:00012
-Read  BET00000 #00002 Trms:00013
-Read  DEL00000 #00003 Trms:00075
-Read  EPS00000 #00004 Trms:00010
-Read  FOR00000 #00005 Trms:00090
-Read  GAM00000 #00006 Trms:00254
-Read  BET00000 #00007 Trms:00013
+Read  ALP00000 #0001 Trms:0012
+Read  BET00000 #0002 Trms:0013
+Read  DEL00000 #0003 Trms:0075
+Read  EPS00000 #0004 Trms:0010
+Read  FOR00000 #0005 Trms:0090
+Read  GAM00000 #0006 Trms:0254
+Read  BET00000 #0007 Trms:0013
 Read Status: 10
-Read2 ALP00000 #00001 Trms:00012
-Read2 BET00000 #00002 Trms:00013
-Read2 DEL00000 #00003 Trms:00075
-Read2 EPS00000 #00004 Trms:00010
-Read2 FOR00000 #00005 Trms:00090
-Read2 GAM00000 #00006 Trms:00254
-Read2 BET00000 #00007 Trms:00013
-Invalid Read2 00008 Status: 23
+Read2 ALP00000 #0001 Trms:0012
+Read2 BET00000 #0002 Trms:0013
+Read2 DEL00000 #0003 Trms:0075
+Read2 EPS00000 #0004 Trms:0010
+Read2 FOR00000 #0005 Trms:0090
+Read2 GAM00000 #0006 Trms:0254
+Read2 BET00000 #0007 Trms:0013
+Invalid Read2 0008 Status: 23
 Read2 Status: 23
 ], [])
 
@@ -2532,34 +2532,34 @@ AT_CHECK([cobc -x -std=mf -w prog.cob], [0], [], [])
 AT_CHECK([./prog], [0], [Loading sample program data file.
 Sample program data file load complete.
 Open Sts:00
-Read2 ALP00000 Trms:00010
-Read  BET00000 Trms:00013
-Read2 ALP00000 Trms:00010
-REWRITE ALP00000 Sts 00 Trms:00011
-Read2 ALP00000 Trms:00011
-REWRITE ALP00000 Sts 00 Trms:00012
-Read  BET00000 Trms:00013
-Read2 ALP00000 Trms:00012
-Read  BET00000 Trms:00013
-REWRITE2 BET00000 Sts 44 Trms:08225
-Read2 ALP00000 Trms:00012
-REWRITE ALP00000 Sts 44 Trms:08225
+Read2 ALP00000 Trms:0010
+Read  BET00000 Trms:0013
+Read2 ALP00000 Trms:0010
+REWRITE ALP00000 Sts 00 Trms:0011
+Read2 ALP00000 Trms:0011
+REWRITE ALP00000 Sts 00 Trms:0012
+Read  BET00000 Trms:0013
+Read2 ALP00000 Trms:0012
+Read  BET00000 Trms:0013
+REWRITE2 BET00000 Sts 44 Trms:8225
+Read2 ALP00000 Trms:0012
+REWRITE ALP00000 Sts 44 Trms:8225
 Reread file after updates Open Sts:00
-Read2 ALP00000 Trms:00012
-Read  BET00000 Trms:00013
-Read2 GAM00000 Trms:00075
-Read  DEL00000 Trms:00010
-Read2 EPS00000 Trms:00090
-Read  FOR00000 Trms:00254
+Read2 ALP00000 Trms:0012
+Read  BET00000 Trms:0013
+Read2 GAM00000 Trms:0075
+Read  DEL00000 Trms:0010
+Read2 EPS00000 Trms:0090
+Read  FOR00000 Trms:0254
 Read status: 10
 Re-list after extend Open Sts:00
-Read2 ALP00000 Trms:00012
-Read  BET00000 Trms:00013
-Read2 GAM00000 Trms:00075
-Read  DEL00000 Trms:00010
-Read2 EPS00000 Trms:00090
-Read  FOR00000 Trms:00254
-Read2 ALP00000 Trms:00010
+Read2 ALP00000 Trms:0012
+Read  BET00000 Trms:0013
+Read2 GAM00000 Trms:0075
+Read  DEL00000 Trms:0010
+Read2 EPS00000 Trms:0090
+Read  FOR00000 Trms:0254
+Read2 ALP00000 Trms:0010
 Read status: 10
 ], [])
 
@@ -2748,26 +2748,26 @@ Open Sts:00
 Read ALP00000 Sts:00
 Read BET00000 Sts:00
 Read ALP00000 Sts:00
-REWRITE ALP00000 Sts 00 Trms:00011
+REWRITE ALP00000 Sts 00 Trms:0011
 Read ALP00000 Sts:00
-REWRITE ALP00000 Sts 00 Trms:00012
+REWRITE ALP00000 Sts 00 Trms:0012
 Read BET00000
 Re-list File Open Sts:00
-Read  ALP00000 Trms:00012
-Read  BET00000 Trms:00013
-Read  GAM00000 Trms:00075
-Read  DEL00000 Trms:00010
-Read  EPS00000 Trms:00090
-Read  FOR00000 Trms:00254
+Read  ALP00000 Trms:0012
+Read  BET00000 Trms:0013
+Read  GAM00000 Trms:0075
+Read  DEL00000 Trms:0010
+Read  EPS00000 Trms:0090
+Read  FOR00000 Trms:0254
 Read Status: 10
 List File afer EXTEND Open Sts:00
-Read  ALP00000 Trms:00012
-Read  BET00000 Trms:00013
-Read  GAM00000 Trms:00075
-Read  DEL00000 Trms:00010
-Read  EPS00000 Trms:00090
-Read  FOR00000 Trms:00254
-Read  BET00000 Trms:00013
+Read  ALP00000 Trms:0012
+Read  BET00000 Trms:0013
+Read  GAM00000 Trms:0075
+Read  DEL00000 Trms:0010
+Read  EPS00000 Trms:0090
+Read  FOR00000 Trms:0254
+Read  BET00000 Trms:0013
 Read Status: 10
 ], [])
 
