@@ -1780,7 +1780,7 @@ AT_DATA([prog.cob], [
 
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([./prog], [0],
-[-14
+[14-
 ])
 
 AT_CLEANUP
