@@ -48,11 +48,11 @@ AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([./prog], [0],
 [abc
 123
-+123
--123
+123+
+123-
 12.3
-+12.3
--12.3
+12.3+
+12.3-
 ])
 
 AT_CLEANUP
@@ -81,8 +81,8 @@ AT_DATA([prog.cob], [
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([./prog], [0],
 [12,3
-+12,3
--12,3
+12,3+
+12,3-
 ])
 
 AT_CLEANUP
